Fix url too long
- url made page get out of space

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -357,6 +357,7 @@ h6 {
   display: inline-block;
   // font-family: "Cormorant Garamond", serif;
   font-family: "Libre Baskerville", serif;
+  word-break: break-all;
 }
 
 .form-container {
